/*
 * Copyright (c) 2000, 2024, Oracle and/or its affiliates.
 *
 * Licensed under the Universal Permissive License v 1.0 as shown at
 * https://oss.oracle.com/licenses/upl.
 */

// Coherence AI service definition.

syntax = "proto3";

package coherence.ai;

import "coherence-ai-messages.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/wrappers.proto";

option java_multiple_files = true;
option java_package = "com.oracle.coherence.ai.grpc";

// A gRPC Vector Store service.
service VectorStoreService {

    // Clear a vector store.
    rpc clear (ClearRequest) returns (google.protobuf.Empty) {
    }

    // Destroy a vector store.
    rpc destroy (DestroyRequest) returns (google.protobuf.Empty) {
    }

    // Add a vector to a vector store
    rpc add (AddRequest) returns (google.protobuf.Empty) {
    }

    // Add a stream of vectors to a vector store
    rpc upload (stream UploadRequest) returns (google.protobuf.Empty) {
    }

    // Get a vector
    rpc get (GetVectorRequest) returns (OptionalVector) {
    }

    // Execute a similarity query
    rpc query (SimilarityQuery) returns (stream QueryResult) {
    }
}